Forced scrollbars on all pages to prevent jumping

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -121,3 +121,9 @@ $table-column-widths: (
 .hidden {
   display: none;
 }
+
+@media only screen {
+  body {
+    overflow-y: scroll;
+  }
+}
